# SemanticInferometer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODS.md  README.md  RESULTS.md  SECURITY.md  THESIS_CHECKLIST.md  probe_hypotheses.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_experiments.py  run_full_experiment_suite.py  start_dash_server.cmd  test_article_metadata_streaming.py  test_complete_pipeline_spectral_contract.py  test_core_stability.py  test_dash_contract_gating_diagnostics.py  test_dash_contract_schema.py  test_dash_verification_gates.py  test_metric_fusion_guardrails.py  test_monolith_semantic_regression.py  test_monolith_viz_guardrails.py  test_monolith_viz_runtime_regressions.py  test_nmi_fix.py  test_phantom_integration.py  test_run_full_experiment_suite_paths.py  test_signal_resurrection.py  test_spectral_polarity_conditioning.py  test_suite_bundle_hooks.py  test_suite_contract_emission.py  test_verify_run_contract_resolution.py  test_waterfall_viz_tsne_projection.py
analysis/: MONOLITH_VIZ.py  ablation.py  airflow_ablation_orchestrator.py  airflow_master_orchestrator.py  airflow_viz_tuple_guard.py  auto_screenshot.py  emit_relativity_cache.py  freeze_viz_tuple.py  isolated_dash_prototype.py  launcher.py  monolith_go_live_checklist.md  monolith_regression.py  waterfall_viz.py
config/: framing_queries.yaml
controls/: make_control_corpus.py
core/: __init__.py  ablation_master.py  artifact_ledger.py  attention_recorder.py  canonical_ids.py  complete_pipeline.py  (+28 more)
(+82 files in other folders)
